# react-from-scratch

./: pyproject.toml
config/: config.yml
data/output/: test.txt
src/config/: setup.py
src/evals/: exactmatch.py
src/llm/: gemini.py
src/react/: agent.py
